# qml-fm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  qml.qrc  res.qrc
cmake/: Qt.cmake
debian/: changelog  control  copyright  qml-filemanager.install  rules
include/: filemanager.h  filesystemmodel.h  iconprovider.h
qml/: FmGridView.qml  FmGridViewDelegate.qml  FmListView.qml  FmListViewDelegate.qml  FmTableView.qml  Main.qml
service/: CMakeLists.txt  com.example.filehelper.service
service/include/: FileHelperService.h  filehelper_adaptor.h
service/src/: FileHelperService.cpp  filehelper_adaptor.cpp  main.cpp
service/xml/: FileOperationsInterface.xml
src/: filemanager.cpp  filesystemmodel.cpp  iconprovider.cpp  main.cpp
